<resources>
    <string name="app_name">Gifthing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="user_name">First name Last name</string>
    <string name="user_nickname">(Nickname)</string>
    <string name="user_email">example@gmail.com</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot my password</string>
    <string name="create_gift">Create gift</string>
    <string name="gift_name">Gift name</string>
    <string name="price">Price</string>
    <string name="link">Link</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="optional">optional</string>
    <string name="title_activity_gift_details">GiftDetailsActivity</string>
    <string name="example">Example</string>
    <string name="delete">delete</string>
    <string name="i_got_it">I got it</string>
    <string name="edit">Edit</string>
    <string name="nickname">Nickname</string>
    <string name="password_again">Password Again</string>
    <string name="error">error</string>

    <string name="home">Home</string>
    <string name="my_gifts">My gifts</string>
    <string name="my_teams">My groups</string>
    <string name="my_invites">My invites</string>
    <string name="reserved_gifts">Reserved gifts</string>
    <string name="create_team">Create group</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="create">Create</string>
    <string name="team_name">Group name</string>
    <string name="members">Members</string>
    <string name="name">Name</string>
    <string name="reserve">Reserve</string>
    <string name="free">Free</string>
    <string name="reserved_by">Reserved by</string>
    <string name="currently_free">Currently free</string>
    <string name="groupName">Group name</string>
    <string name="add">Add</string>
    <string name="owner">Owner</string>
    <string name="required">Required</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="allowed_characters">0123456789qwertzuiopasdfghjklyxcvbnm QWERTZUIOPASDFGHJKLYXCVBNM</string>
    <string name="name_of_the_group">Name of the group</string>
    <string name="username">Username</string>
    <string name="addMember">Add Member</string>
    <string name="you">You</string>
    <string name="logout">Logout</string>
    <string name="price_huf">Price (HUF)</string>
    <string name="huf">HUF</string>

</resources>
