<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/account_group"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_groups"
            android:icon="@drawable/account_group"
            android:title="@string/my_groups" />
        <item
            android:id="@+id/nav_my_gifts"
            android:icon="@drawable/gift"
            android:title="@string/my_gifts" />
        <item
            android:id="@+id/nav_my_invites"
            android:icon="@drawable/email_plus"
            android:title="@string/my_invites" />
        <item
            android:id="@+id/nav_reserved_gifts"
            android:icon="@drawable/cart"
            android:title="@string/reserved_gifts" />
        <item
            android:id="@+id/nav_create_group"
            android:icon="@drawable/account_multiple_plus_outline"
            android:title="@string/create_group" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>
