<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/create_gift"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="3"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/gift_name"
            android:gravity="right"
            android:textSize="18sp"/>

        <EditText
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/giftName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="3"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:gravity="right"
            android:textSize="18sp"/>

        <EditText
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/giftPrice"
            android:hint="@string/optional"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="3"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:gravity="right"
            android:textSize="18sp"/>

        <EditText
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/giftLink"
            android:hint="@string/optional"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="3"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:gravity="right"
            android:textSize="18sp"/>

        <EditText
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="1"
            android:maxLines="8"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:scrollbars="vertical"
            android:layout_height="wrap_content"
            android:id="@+id/giftDescription"
            android:hint="@string/optional"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/OK"
            android:layout_margin="20dp"/>
    </LinearLayout>
</LinearLayout>