<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">


    <TextView
        android:id="@+id/giftName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="@string/gift_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/giftPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/huf"
        android:textSize="24sp"
        tools:text="@string/price" />

    <TextView
        android:id="@+id/huf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/huf"
        android:paddingLeft="10dp"
        android:layout_alignParentEnd="true" />

</RelativeLayout>